; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/serial/8250/extr_8250_mid.c_dnv_exit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/serial/8250/extr_8250_mid.c_dnv_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mid8250 = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mid8250*)* @dnv_exit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dnv_exit(%struct.mid8250* %0) #0 {
  %2 = alloca %struct.mid8250*, align 8
  store %struct.mid8250* %0, %struct.mid8250** %2, align 8
  %3 = load %struct.mid8250*, %struct.mid8250** %2, align 8
  %4 = getelementptr inbounds %struct.mid8250, %struct.mid8250* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %12

8:                                                ; preds = %1
  %9 = load %struct.mid8250*, %struct.mid8250** %2, align 8
  %10 = getelementptr inbounds %struct.mid8250, %struct.mid8250* %9, i32 0, i32 0
  %11 = call i32 @hsu_dma_remove(i32* %10)
  br label %12

12:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @hsu_dma_remove(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
